--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,30 @@
 /* Other rules */
+.header {
+  width: 1240;
+  height: 50px;
+}
+
+.header img {
+  width: 110px;
+  height: 44px;
+}
+
+.home {
+  width: 1440px;
+  height: 354px;
+}
+
+.home img {
+  width: 1440px;
+  height: 354px;
+  object-fit: cover;
+}
+
+.imgOffer img {
+  width: 300px;
+  height: 300px;
+}
+
+.offer {
+  border: 1px solid black;
+}
