--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,53 @@
 /* Other rules */
+
+/* Header */
 .header {
-  width: 1240;
-  height: 50px;
+  width: 1280;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header img {
   width: 110px;
   height: 44px;
+  margin-left: 65px;
 }
+
+.header input {
+  width: 615px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  background-color: #f5f6f7;
+}
+
+#icon {
+  position: absolute;
+  left: 230px;
+  right: 400px;
+  color: #bbbbbb;
+}
+
+.header button {
+  background-color: white;
+  color: #2db0ba;
+  border: 1px solid #2db0ba;
+  width: 115px;
+  height: 30px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.header button:last-child {
+  margin-right: 120px;
+  color: white;
+  background-color: #2db0ba;
+  width: 123px;
+}
+
+/* Home */
 
 .home {
   width: 1440px;
@@ -16,15 +56,131 @@
 
 .home img {
   width: 1440px;
-  height: 354px;
+  height: 455px;
   object-fit: cover;
 }
 
+.box-image {
+  background-color: white;
+  width: 410px;
+  height: 270px;
+  border: 1px solid rgb(179, 177, 177);
+  border-radius: 3px;
+  left: 100px;
+  bottom: 330px;
+  padding: 55px 28px 25px;
+  box-sizing: border-box;
+  position: absolute;
+}
+
+.box-image p {
+  width: 309px;
+  height: 82px;
+  font-size: 37px;
+  line-height: 40px;
+}
+
+.box-image button {
+  width: 187px;
+  height: 45px;
+  color: white;
+  background-color: #2db0ba;
+  border: none;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+/* Offers */
+
+.offer-container {
+  width: 1440px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .imgOffer img {
-  width: 300px;
-  height: 300px;
+  width: 235px;
+  height: 360px;
+  object-fit: cover;
 }
 
 .offer {
-  border: 1px solid black;
+  width: 247px;
+  height: 479px;
+  padding: 6px 6px 16px;
+  box-sizing: border-box;
+  margin-right: 12px;
+}
+
+.offer p {
+  margin-top: 5px;
+  margin-bottom: 7px;
+}
+
+.link {
+  text-decoration: none;
+  color: #999999;
+  font-size: 14px;
+  line-height: 10px;
+}
+
+.black {
+  color: black;
+  font-size: 17px;
+  line-height: 13px;
+  margin-bottom: 8px;
+}
+
+.home-bottom-text {
+  color: #999999;
+  font-size: 12px;
+}
+
+/* OFFER ROUTE*/
+
+.black-price {
+  font-size: 24px;
+  color: black;
+  margin-bottom: 10px;
+}
+
+.route-offer-cointaner {
+  width: 1440px;
+  background-color: #eaedee;
+}
+
+.route-offer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 700px;
+}
+
+.route-texts {
+  width: 400px;
+  height: 605px;
+  background-color: white;
+  padding: 40px 40px 40px;
+  box-sizing: border-box;
+}
+
+.bottom-textos {
+  margin-top: 50px;
+  color: #666666;
+}
+
+.bottom-textos button {
+  color: #fff;
+  background: #09b1ba;
+  border: 1px solid #09b1ba;
+  border-radius: 4px;
+  width: 100%;
+  font-size: 16px;
+  height: 36px;
+  padding: 0 16px;
+  line-height: 36px;
+  margin-top: 32px;
 }
